--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
     ".next/types/**/*.ts",
     "app/lib/placeholder-data.js",
     "scripts/seed.js"
-  ],
+, ".next/types/app/dashboard/invoices/page.tsx"  ],
   "exclude": ["node_modules"]
 }
